# oreilly-dl

./: .gitignore  oreilly_books_dl.py  oreilly_dl.py  pyproject.toml  requirements.txt  setup.sh  utils.py
